--- a/scripts.html
+++ b/scripts.html
@@ -44,7 +44,8 @@
 		<h1>Obtener información sobre la fabricación y modelo de un ordenador</h1><br />
 		<p>Get-WmiObject -Class Win32_ComputerSystem </p><br />
     <h1>Obtener el serial del ordenador</h1><br />
-    <p>(Get-WmiObject win32_bios).SerialNumber </p><br />
+    <p>(Get-WmiObject win32_bios).SerialNumber </p><br /><br/>
+			
     		</div>
 
     <footer>
