--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section id="cabecera">
       <div class="contenedor">
-        <h1>Somos los mejores admimistrador de 1ºAsir Rodrigo Caro </h1>
+        <h1>Somos los mejores admimistradores de 1ºAsir Rodrigo Caro </h1>
         <p>Hacemos los mejores scripts para administrar sistemas</p>
       </div>
     </section>
