--- a/scripts.html
+++ b/scripts.html
@@ -45,7 +45,7 @@
 		<p>Get-WmiObject -Class Win32_ComputerSystem </p><br />
     <h1>Obtener el serial del ordenador</h1><br />
     <p>(Get-WmiObject win32_bios).SerialNumber </p><br /><br/>
-			<p> <a href="PEGA LA RUTA DEL SCRIPT AQUÌ">Descarga el SCRIPT aquí </a></p>
+			<p> <a href="https://github.com/triplea1996/Powershell/blob/master/trabajo.ps1">Descarga el SCRIPT aquí </a></p>
 			
     		</div>
 
